--- a/pipeline.yml
+++ b/pipeline.yml
@@ -5,5 +5,5 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
-- script: echo Hello, world!
+- script: echo Hello, world! Can you see this?
   displayName: 'Run a one-line script'
