--- a/pipeline.yml
+++ b/pipeline.yml
@@ -1,9 +1,25 @@
 trigger:
 - main
-
+variables:
+    # Container registry service connection established during pipeline creation
+    dockerRegistryServiceConnection: '{{ containerRegistryConnection.Id }}'
+    imageRepository: 'test'
+    containerRegistry: 'kunmipipelinetest.azurecr.io'
+    dockerfilePath: '$(Build.SourcesDirectory)/app/Dockerfile'
+    tag: '$(Build.BuildId)'
 pool:
   vmImage: ubuntu-latest
 
 steps:
 - script: echo Hello, world! Can you see this?
   displayName: 'Run a one-line script'
+- task: Docker@2 
+  displayName: Build and push an image to container registry
+  inputs:
+    command: buildAndPush
+    repository: $(imageName)
+    dockerfile: $(Build.SourcesDirectory)/test/Dockerfile
+    containerRegistry: $(dockerRegistryServiceConnection)
+    tags: |
+      $(tag)
+     
