--- a/pipeline.yml
+++ b/pipeline.yml
@@ -2,10 +2,10 @@ trigger:
 - main
 variables:
     # Container registry service connection established during pipeline creation
-    dockerRegistryServiceConnection: '{{ containerRegistryConnection.Id }}'
-    imageRepository: 'test'
-    containerRegistry: 'kunmipipelinetest.azurecr.io'
-    dockerfilePath: '$(Build.SourcesDirectory)/app/Dockerfile'
+    # dockerRegistryServiceConnection: '{{ containerRegistryConnection.Id }}'
+    # imageRepository: 'test'
+    # containerRegistry: 'kunmipipelinetest.azurecr.io'
+    # dockerfilePath: '$(Build.SourcesDirectory)/app/Dockerfile'
     tag: '$(Build.BuildId)'
 pool:
   vmImage: ubuntu-latest
@@ -16,10 +16,10 @@ steps:
 - task: Docker@2 
   displayName: Build and push an image to container registry
   inputs:
-    command: buildAndPush
-    repository: $(imageName)
-    dockerfile: $(Build.SourcesDirectory)/test/Dockerfile
-    containerRegistry: $(dockerRegistryServiceConnection)
-    tags: |
-      $(tag)
+    containerRegistry: 'kunmipipelinetest'
+    repository: '$(imageName)'
+    command: 'buildAndPush'
+    Dockerfile: '**/test/Dockerfile'
+    tags: '$(tag)'
+    addPipelineData: false
      
