--- a/pipeline.yml
+++ b/pipeline.yml
@@ -22,4 +22,22 @@ steps:
     Dockerfile: '**/test/Dockerfile'
     tags: '$(tag)'
     addPipelineData: false
+
+- task: Kubernetes@1
+  displayName: 'Deploy to kubernetes'
+  inputs:
+    connectionType: 'Azure Resource Manager'
+    azureSubscriptionEndpoint: '$(azureSubscription)'
+    azureResourceGroup: 'pipelinetest'
+    kubernetesCluster: 'akspipelinecluster'
+    namespace: 'default'
+    command: 'apply'
+    arguments: '-f ./deployment.yml'
+    secretType: 'dockerRegistry' # If needed, specify the secret type
+    dockerRegistryEndpoint: 'kunmipipelinetest' # Use your Docker registry service connection name
+    dockerRegistryServiceConnection: 'kunmipipelinetest' # Use your Docker registry service connection name
+    containerRegistryType: 'Azure Container Registry'
+    # dockerRegistryServiceConnectionSecretName: 'your-secret-name' # Name of the Kubernetes secret containing your ACR credentials\
+    overrideOptions: '--set=image.tag=$(Build.BuildId)'  # Pass the dynamic tag to the Kubernetes manifest
+
      
