--- a/deployment.yml
+++ b/deployment.yml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
         - name: kunmi-app
-          image: kunmipipelinetest.azurecr.io/testing:${tag}
+          image: kunmipipelinetest.azurecr.io/testing:31
           ports:
             - containerPort: 80
               name: http-web-api
