--- a/pipeline.yml
+++ b/pipeline.yml
@@ -38,5 +38,5 @@ steps:
     dockerRegistryEndpoint: 'kunmipipelinetest' # Use your Docker registry service connection name
     dockerRegistryServiceConnection: 'kunmipipelinetest' # Use your Docker registry service connection name
     containerRegistryType: 'Azure Container Registry'
-    # dockerRegistryServiceConnectionSecretName: 'your-secret-name' # Name of the Kubernetes secret containing your ACR credentials\
+    dockerRegistryServiceConnectionSecretName: 'acrsecret' # Name of the Kubernetes secret containing your ACR credentials\
     # overrideOptions: '--set=image.tag=$(Build.BuildId)'  # Pass the dynamic tag to the Kubernetes manifest
