--- a/pipeline.yml
+++ b/pipeline.yml
@@ -35,7 +35,7 @@ steps:
     command: 'apply'
     arguments: '-f ./deployment.yml'
     secretType: 'dockerRegistry'
-    dockerRegistryEndpoint: 'kunmipipelinetest.azurecr.io'
+    dockerRegistryEndpoint: 'kunmipipelinetest'
     dockerRegistryServiceConnection: 'kunmipipelinetest'
     containerRegistryType: 'Azure Container Registry'
     dockerRegistryServiceConnectionSecretName: 'acrsecret'
